# cap-validator

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: unit_testing.yml
src/cap_upload_validator/: cli.py  errors.py  upload_validator.py
src/cap_upload_validator/gene_mapping/: gene_map.py
src/cap_upload_validator/gene_mapping/data/: mus_musculus.csv
src/cap_validator/: errors.py  upload_validator.py
src/cap_validator/gene_mapping/: gene_map.py
src/cap_validator/gene_mapping/data/: homo_sapiens.csv  mus_musculus.csv
test/: test_upload_validator.py
test/data/: valid.h5ad
